--- a/sass/site/blog/blog-layouts/_archive.scss
+++ b/sass/site/blog/blog-layouts/_archive.scss
@@ -73,7 +73,7 @@
 		.ast-author-box,
 		.ast-archive-description{
 		    margin: 0;
-		    padding: 5em 6.67em 3.33333em;
+		    padding: 4em;
 		}
 	}
 }
